--- a/app/src/components/elements/layout.css
+++ b/app/src/components/elements/layout.css
@@ -1,5 +1,4 @@
 :root {
-  /* TYPOGRAPHY */
   --sans: "Avenir", sans-serif;
 }
 
@@ -8,4 +7,9 @@ body {
   font-family: var(--sans);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 21px;
+}
+
+p {
+  line-height: 1.4;
 }
