--- a/app/src/components/elements/layout.css
+++ b/app/src/components/elements/layout.css
@@ -10,6 +10,7 @@ body {
   font-family: var(--sans);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: white;
 }
 
 p {
