--- a/app/src/components/elements/layout.css
+++ b/app/src/components/elements/layout.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css?family=Merriweather|Montserrat&display=swap");
+/* @import url("https://fonts.googleapis.com/css?family=Merriweather|Montserrat&display=swap"); */
 
 :root {
   --sans: "Avenir", sans-serif;
-  --serif: "Merriweather", serif;
+  /* --serif: "Merriweather", serif; */
 }
 
 body {
@@ -16,5 +16,5 @@ body {
 p {
   line-height: 1.6;
   color: black;
-  font-family: var(--serif);
+  /* font-family: var(--serif); */
 }
