responsive auth pages

--- a/app/src/components/elements/layout.css
+++ b/app/src/components/elements/layout.css
@@ -20,6 +20,15 @@ body {
   font-size: var(--font-size);
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: 1.2;
+}
+
 p {
   line-height: 1.6;
   color: black;
