delete list mutation

--- a/client/src/components/elements/layout.css
+++ b/client/src/components/elements/layout.css
@@ -4,6 +4,7 @@
   --accent: red;
   --black: black;
   --white: white;
+  --warning: red;
   --font-size: 21px;
   --heading: 50px;
   --radius: 2px;
