add view on map mobile feature

--- a/client/src/components/elements/layout.css
+++ b/client/src/components/elements/layout.css
@@ -10,6 +10,10 @@
   --radius: 2px;
   --thickness: 2px;
   --link-color: blue;
+  --facebook: #3b5998;
+  --twitter: #1da1f2;
+  --pinterest: #c8232c;
+  --instagram: #5851db;
   --container: 667px;
   --max-width: 1000px;
   --mobile: 600px;
