display close btn on mobile view on map modal

--- a/client/src/components/elements/layout.css
+++ b/client/src/components/elements/layout.css
@@ -4,6 +4,7 @@
   --accent: darkred;
   --black: black;
   --white: white;
+  --red: tomato;
   --warning: red;
   --font-size: 21px;
   --heading: 50px;
