--- a/client/src/components/elements/layout.css
+++ b/client/src/components/elements/layout.css
@@ -4,6 +4,7 @@
   --accent: darkred;
   --black: black;
   --white: white;
+  --grey: grey;
   --warning: red;
   --font-size: 21px;
   --heading: 50px;
