--- a/client/src/components/elements/layout.css
+++ b/client/src/components/elements/layout.css
@@ -1,5 +1,8 @@
+@import url("https://fonts.googleapis.com/css?family=Merriweather&display=swap");
+
 :root {
   --sans: "Avenir", sans-serif;
+  --serif: "Merriweather", serif;
   --duration: 0.2s;
   --accent: darkred;
   --black: black;
