--- a/client/src/components/elements/layout.css
+++ b/client/src/components/elements/layout.css
@@ -1,9 +1,56 @@
-@import url("https://fonts.googleapis.com/css?family=Merriweather&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Karla:400,700&display=swap");
 
 :root {
-  --sans: "Avenir", sans-serif;
-  --serif: "Merriweather", serif;
-  --duration: 0.2s;
+  /* Layout */
+  --max-width: 1000px;
+  /* Typography */
+  --sans: "Karla", sans-serif;
+  --heading-line-height: 1.2;
+  --paragraph-line-height: 1.75;
+  --heading-letter-spacing: -1.2px;
+  --paragraph-letter-spacing: 0px;
+
+  /* Vertical Rhythm */
+  --responsive-unit: 0.5vw; /* TWEAK ME  */
+
+  /* base values */
+  --text-base-size: calc(0.8rem + var(--responsive-unit));
+  --text-scale-ratio: 1.3; /* TWEAK ME */
+  /* type scale */
+  --text-xs: calc(
+    1rem / (var(--text-scale-ratio) * var(--text-scale-ratio)) +
+      var(--responsive-unit)
+  );
+  --text-sm: calc(1rem / var(--text-scale-ratio) + var(--responsive-unit));
+  --text-md: calc(1rem * var(--text-scale-ratio) + var(--responsive-unit));
+  --text-lg: calc(
+    1rem * var(--text-scale-ratio) * var(--text-scale-ratio) +
+      var(--responsive-unit)
+  );
+  --text-xl: calc(
+    1rem * var(--text-scale-ratio) * var(--text-scale-ratio) *
+      var(--text-scale-ratio) + var(--responsive-unit)
+  );
+  --text-xxl: calc(
+    1rem * var(--text-scale-ratio) * var(--text-scale-ratio) *
+      var(--text-scale-ratio) * var(--text-scale-ratio) + var(--responsive-unit)
+  );
+  --text-xxxl: calc(
+    1rem * var(--text-scale-ratio) * var(--text-scale-ratio) *
+      var(--text-scale-ratio) * var(--text-scale-ratio) *
+      var(--text-scale-ratio) + var(--responsive-unit)
+  );
+
+  /* spacing */
+  --baseline: calc(1.2rem + var(--responsive-unit));
+  --component-padding: var(--space-sm);
+  /* spacing values */
+  --space-sm: calc(var(--baseline) / 2);
+  --space-md: var(--baseline);
+  --space-lg: calc(var(--baseline) * 2);
+  --space-xl: calc(var(--baseline) * 3);
+
+  /* Colors */
   --accent: darkred;
   --black: black;
   --white: white;
@@ -11,21 +58,24 @@
   --red: tomato;
   --warning: red;
   --font-size: 21px;
-  --heading: 50px;
-  --radius: 2px;
-  --thickness: 2px;
   --link-color: blue;
   --facebook: #3b5998;
   --twitter: #1da1f2;
   --pinterest: #c8232c;
   --instagram: #5851db;
-  --max-width: 1000px;
+
+  /* animation */
+  --duration: 0.2s;
+
+  /* design */
+  --radius: 2px;
+  --thickness: 2px;
 }
 
 body {
   margin: 0;
-  font-size: var(--font-size);
   font-family: var(--sans);
+  font-size: var(--text-base-size);
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 }
@@ -33,22 +83,69 @@ body {
 h1,
 h2,
 h3,
+h4 {
+  line-height: var(--heading-line-height);
+  letter-spacing: var(--heading-letter-spacing);
+  font-weight: 900;
+}
+
+/* text size */
+.text--xxxl {
+  font-size: var(--text-xxxl);
+  margin: var(--space-xl) 0;
+}
+
+h1,
+.text--xxl {
+  font-size: var(--text-xxl);
+  margin: var(--space-lg) 0;
+}
+
+h2,
+.text--xl {
+  font-size: var(--text-xl);
+  margin: var(--space-md) 0;
+}
+
+h3,
+.text--lg {
+  font-size: var(--text-lg);
+  margin: var(--space-md) 0;
+}
+
 h4,
-h5,
-h6 {
-  line-height: 1.15;
+.text--md {
+  font-size: var(--text-md);
+  margin: var(--space-sm) 0;
+}
+
+.text--sm,
+small {
+  font-size: var(--text-sm);
+  margin: var(--space-sm) 0;
+}
+
+.text--xs {
+  font-size: var(--text-xs);
+  margin: var(--space-sm) 0;
 }
 
 p {
-  line-height: 1.6;
+  line-height: var(--body-line-height);
+  margin: var(--space-sm) 0;
+  line-height: var(--paragraph-line-height);
+  letter-spacing: var(--paragraph-letter-spacing);
 }
 
-a {
-  color: var(--link-color);
+li {
+  margin-bottom: var(--space-sm);
 }
 
-@media (max-width: 600px) {
-  body {
-    font-size: 18px;
-  }
+br {
+  margin: var(--space-md) 0;
+}
+
+.component {
+  padding: var(--component-padding);
+  margin-bottom: var(--space-md);
 }
