--- a/client/src/components/elements/layout.css
+++ b/client/src/components/elements/layout.css
@@ -1,17 +1,44 @@
 @import url("https://fonts.googleapis.com/css?family=Karla:400,700&display=swap");
 
 :root {
-  /* Typography */
-  --sans: "Karla", sans-serif;
-  --heading-line-height: 1.1;
-  --paragraph-line-height: 1.75;
-  --heading-letter-spacing: -1.55px;
-  --paragraph-letter-spacing: -0.2px;
-  /* Vertical Rhythm */
-  --responsive-unit: 0.5vw; /* TWEAK ME  */
-  /* Base Values */
-  --text-base-size: calc(0.9rem + var(--responsive-unit));
-  --text-scale-ratio: 1.3; /* TWEAK ME */
+  /* COLORS */
+  --text-color: black;
+  --bg-1: #fafafaee;
+  --bg-2: white;
+  --grey: #666666;
+  --accent-1: black;
+  --accent-2: hotpink;
+  --code-bg: #28272c;
+  --warning: tomato;
+  /* COMPONENTS */
+  --shadow-color: rgba(163, 119, 119, 0.1);
+  --radius: 5px;
+  --thickness: 0.2vw;
+  --elevation-1: 0 4px 12px var(--shadow-color);
+  --elevation-2: 0 8px 16px var(--shadow-color);
+  --elevation-3: 0 16px 32px var(--shadow-color);
+  --opacity: opacity(0.35);
+  --transition: all 0.2s ease 0s;
+  /* LAYOUT  */
+  --container: 850px;
+  --max-width: 2000px;
+  /* VALUES */
+  --responsive-unit: 0.5vw;
+  --baseline: calc(1.2rem + var(--responsive-unit));
+  /* TYPOGRAPHY */
+  /* --sans: "Inter", sans-serif; */
+  --serif: "Karla", serif;
+  --mono: "Fira Code", monospace;
+  --heading-line-height: 1.3;
+  --paragraph-line-height: 1.7;
+  --heading-letter-spacing: 0rem;
+  --paragraph-letter-spacing: 0rem;
+  --caps-letter-spacing: 0rem;
+  --text-base-size: calc(1rem + var(--responsive-unit));
+  --text-scale-ratio: 1.2;
+
+  /* VARIABLES BELOW THIS HAVE DERIVED / CALCULATED VALUES: ADJUSTING THEM CAN BREAK THE SYSTEM. TREAD LIGHTLY  */
+
   /* Type Scale */
   --text-xs: calc(
     1rem / (var(--text-scale-ratio) * var(--text-scale-ratio)) +
@@ -36,77 +63,65 @@
       var(--text-scale-ratio) * var(--text-scale-ratio) *
       var(--text-scale-ratio) + var(--responsive-unit)
   );
-  /* Spacing */
-  --baseline: calc(1.2rem + var(--responsive-unit));
-  --component-padding: var(--space-sm);
-  /* Spacing Values */
+  /* Calculated Spacing */
   --space-sm: calc(var(--baseline) / 2);
   --space-md: var(--baseline);
   --space-lg: calc(var(--baseline) * 2);
-  --space-xl: calc(var(--baseline) * 3);
-  /* Colors */
-  --white: white;
-  --black: black;
-  --grey: #555555;
-  /* */
-  --text-color: var(--black);
-  --href-color: black;
-  --bg-1: var(--white);
-  --bg-2: #f2f2f2;
-  --primary-btn-bg: var(--black);
-  --outline-btn-bg: var(--bg-2);
-  --primary-btn-color: var(--white);
-  --outline-btn-color: var(--grey);
-  --input-border: var(--black);
-  --input-bg: var(--bg-2);
-  --card-bg: var(--bg-1);
-  /* */
-  --green: green;
-  --red: darkred;
-  --facebook: #3b5998;
-  --twitter: #1da1f2;
-  --pinterest: #c8232c;
-  --instagram: #5851db;
-  /* Animation */
-  --duration: 0.2s;
-  /* Components */
-  --radius: 4px;
-  --thickness: 2px;
-  --elevation-1: 0 4px 12px rgba(0, 0, 0, 0.05);
-  --elevation-2: 0px 4px 12px rgba(0, 0, 0, 0.2);
-  --elevation-3: 0px 12px 20px rgba(0, 0, 0, 0.2);
-  --transition: all 0.15s ease-in 0s;
-  --opacity: opacity(0.35);
+  --space-xl: calc(var(--baseline) * 4);
+  /* Derived Component Colors */
+
+  --href-color: var(--accent-1);
+  --href-hover-color: var(--accent-2);
+  --btn-bg: var(--bg-1);
+  --btn-color: var(--text-color);
+  --btn-border: var(--href-color);
+  --btn-hover-color: var(--text-color);
+  --primary-btn-bg: var(--accent-1);
+  --primary-btn-color: var(--bg-1);
+  --primary-btn-hover-color: var(--bg-1);
+  --input-border: var(--accent-1);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --text-color: var(--white);
-    --href-color: fuchsia;
-    --bg-1: var(--black);
+    /* Customizable values */
+    --bg-1: rgb(0, 0, 0);
     --bg-2: #1a1a1b;
-    --input-bg: var(--bg-2);
-    --primary-btn-bg: #1a1a1b;
-    --primary-btn-color: var(--href-color);
-    --card-bg: var(--bg-2);
-    --red: tomato;
-    --green: lime;
-    --grey: grey;
+    --accent-1: papayawhip;
+    --accent-2: hotpink;
+    --grey: #fafafa9f;
+    --text-color: white;
+    --shadow-color: rgba(25, 17, 37, 0.883);
+    --href-color: var(--accent-1);
+    --href-hover-color: var(--accent-2);
+    --btn-color: var(--href-color);
+    --btn-hover-color: var(--href-hover-color);
+    --primary-btn-color: var(--accent-1);
+    --primary-btn-bg: var(--bg-2);
+    --primary-btn-hover-color: var(--bg-1);
+    --input-border: var(--bg-2);
+    --code-bg: var(--bg-2);
   }
 }
 
-html {
-  width: 100%;
-}
+/* Elements */
 
 body {
   margin: 0;
-  font-family: var(--sans);
+  font-family: var(--serif);
   font-size: var(--text-base-size);
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  color: var(--text-color);
   background: var(--bg-1);
+  color: var(--text-color);
+}
+
+a {
+  color: var(--href-color);
+}
+
+a:hover {
+  color: var(--href-hover-color);
 }
 
 h1,
@@ -115,19 +130,25 @@ h3,
 h4 {
   line-height: var(--heading-line-height);
   letter-spacing: var(--heading-letter-spacing);
-  font-weight: 900;
 }
 
-/* text size */
 .text--xxxl {
   font-size: var(--text-xxxl);
   margin: var(--space-xl) 0;
 }
 
+h1 {
+  font-weight: 900;
+}
+
+h1 .site-title {
+  font-size: var(--text-xxxl);
+}
+
 h1,
 .text--xxl {
   font-size: var(--text-xxl);
-  margin: var(--space-md) 0;
+  margin: var(--space-lg) 0;
 }
 
 h2,
@@ -145,7 +166,7 @@ h3,
 h4,
 .text--md {
   font-size: var(--text-md);
-  margin: var(--space-sm) 0;
+  margin: var(--space-md) 0;
 }
 
 .text--sm,
@@ -154,23 +175,50 @@ small {
   margin: var(--space-sm) 0;
 }
 
+small {
+  font-weight: 500;
+}
+
 .text--xs {
   font-size: var(--text-xs);
   margin: var(--space-sm) 0;
 }
 
 p {
-  margin: var(--space-sm) 0;
+  margin-bottom: var(--space-md);
   line-height: var(--paragraph-line-height);
   letter-spacing: var(--paragraph-letter-spacing);
+  font-weight: 500;
+  font-size: var(--text-md);
+}
+
+ul {
+  margin-top: var(--space-md);
+  margin-bottom: var(--space-md);
+  padding-left: var(--space-md);
 }
 
 li {
   margin-bottom: var(--space-sm);
+  line-height: var(--paragraph-line-height);
+  font-weight: 500;
+  font-size: var(--text-md);
+}
+
+li:last-child {
+  margin-bottom: var(--space-lg);
+}
+
+li > p {
+  margin-bottom: var(--space-sm);
+}
+
+li > a {
+  word-break: break-all;
 }
 
 br {
-  margin: var(--space-md) 0;
+  margin: var(--space-xl) 0;
 }
 
 input,
@@ -178,17 +226,373 @@ textarea {
   font-size: var(--text-md);
 }
 
-button {
+pre {
+  font-family: var(--mono);
+  background: var(--code-bg);
+  box-shadow: var(--elevation-1);
+}
+
+blockquote {
+  background: var(--bg-2);
+  padding: var(--space-md);
+  border-left: 0.5rem solid var(--href-color);
+  box-shadow: var(--elevation-1);
+  border-radius: var(--radius);
+  letter-spacing: var(--paragraph-letter-spacing);
+  line-height: var(--paragraph-line-height);
+  margin: var(--space-lg) 0;
+}
+
+blockquote > p {
+  margin: 0;
+  font-style: italic;
+}
+
+blockquote > h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+}
+
+code {
+  font-family: var(--mono);
+  color: var(--text-color);
+}
+
+code[class*="language-"],
+pre[class*="language-"] {
+  font-family: var(--mono);
   font-size: var(--text-sm);
-}
-
-.component {
-  padding: var(--component-padding);
+  margin-top: var(--space-md);
   margin-bottom: var(--space-md);
+  border-radius: var(--radius);
 }
 
-@media (max-width: 1024px) {
-  .responsive-padding {
+:not(pre) > code,
+pre {
+  background: var(--code-bg);
+  color: white;
+  padding: 0 var(--space-sm);
+  border-radius: var(--radius);
+}
+
+hr {
+  border-color: var(--href-color);
+  border-top: var(--thickness) solid var(--href-color);
+  margin-top: var(--space-lg);
+  margin-bottom: var(--space-lg);
+  box-shadow: var(--elevation-2);
+  border-radius: var(--radius);
+}
+
+/* Elements */
+
+.btn {
+  cursor: pointer;
+  background: var(--bg-1);
+  color: var(--btn-color);
+  padding: var(--space-sm) var(--space-md);
+  font-size: var(--text-size);
+  font-weight: bolder;
+  font-family: var(--sans);
+  border: var(--thickness) solid var(--btn-border);
+  border-radius: var(--radius);
+  transition: var(--transition);
+  font-weight: bolder;
+  font-family: var(--sans);
+  margin-bottom: var(--space-md);
+  text-transform: uppercase;
+  letter-spacing: var(--heading-letter-spacing);
+  margin-right: var(--space-md);
+}
+
+.btn:hover {
+  box-shadow: var(--elevation-1);
+}
+
+.btn:last-child {
+  margin-right: 0;
+}
+
+.btn:hover,
+.btn:focus {
+  border: var(--thickness) solid var(--href-hover-color);
+  color: var(--btn-hover-color);
+  box-shadow: inset var(--elevation-1);
+}
+
+.btn:disabled {
+  background: var(--bg-2);
+  border-color: var(--grey);
+  color: var(--grey);
+  opacity: var(--opacity);
+  filter: var(--opacity);
+}
+
+.btn-primary {
+  background: var(--primary-btn-bg);
+  color: var(--primary-btn-color);
+  border: var(--thickness) solid var(--primary-btn-bg);
+  box-shadow: var(--elevation-2);
+}
+
+.btn-primary:hover,
+.btn-primary:focus {
+  color: var(--primary-btn-hover-color);
+  box-shadow: var(--elevation-1);
+  background: var(--href-hover-color);
+}
+
+.btn-primary:disabled {
+  background: var(--grey);
+  color: var(--bg-1);
+}
+
+.card {
+  background: var(--bg-2);
+  box-shadow: var(--elevation-1);
+  border-radius: var(--radius);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card:hover {
+  box-shadow: var(--elevation-3);
+}
+
+.card-heading {
+  margin: 0;
+  padding: var(--space-sm);
+}
+
+.card-text {
+  margin: 0;
+  padding: var(--space-sm);
+  color: var(--grey);
+}
+
+.fieldset {
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
+.figcaption {
+  margin-top: var(--space-lg);
+}
+
+.figure {
+  margin: 0;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
+
+.header,
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.input {
+  font-family: var(--sans);
+  border-radius: var(--radius);
+  border: var(--thickness) solid var(--input-border);
+  padding: var(--space-sm);
+  margin-bottom: var(--space-md);
+  background-color: var(--bg-2);
+  color: var(--text-color);
+  font-size: var(--font-size);
+  letter-spacing: var(--paragraph-letter-spacing);
+  box-shadow: var(--elevation-1);
+}
+
+.input:focus {
+  background-color: var(--bg-2);
+}
+
+.main {
+  min-height: 100vh;
+}
+
+.nav {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.navlink {
+  margin-top: var(--space-md);
+  margin-right: var(--space-sm);
+  margin-bottom: var(--space-md);
+  margin-left: 0;
+  font-weight: 700;
+  font-size: var(--text-md);
+}
+
+/* TODO: REMOVE */
+
+.nav-link {
+  text-decoration: none;
+  margin-right: var(--space-md);
+  color: var(--href-color);
+  transition: var(--transition);
+  font-weight: 700;
+}
+
+.nav-link:last-child {
+  margin-right: 0;
+}
+
+.nav-link:focus {
+  color: var(--href-hover-color);
+}
+
+.nav-link:hover {
+  color: var(--href-hover-color);
+}
+
+.nav-link[data-is-active="true"] {
+  color: var(--href-hover-color);
+  text-decoration: underline;
+}
+
+.textarea {
+  font-family: var(--sans);
+  border-radius: var(--radius);
+  border: var(--thickness) solid var(--input-border);
+  padding: var(--space-sm);
+  margin-bottom: var(--space-md);
+  background-color: var(--bg-2);
+  color: var(--text-color);
+  font-size: var(--font-size);
+  resize: vertical;
+  box-shadow: var(--elevation-1);
+  letter-spacing: var(--paragraph-letter-spacing);
+}
+
+/* Layout Classes  */
+
+.padding {
+  padding: 0 var(--space-sm);
+}
+
+.container {
+  max-width: var(--container);
+}
+
+.none {
+  text-decoration: none;
+}
+
+.center {
+  margin: 0 auto;
+}
+
+.content-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: var(--space-lg) var(--space-sm);
+  margin-top: var(--space-lg);
+  margin-bottom: var(--space-lg);
+}
+
+@media (max-width: 800px) {
+  .content-grid {
+    grid-template-columns: 1fr;
+  }
+}
+
+.content-aside-grid {
+  display: grid;
+  grid-template-areas: "content  aside";
+  grid-template-columns: 5fr 2fr;
+  grid-column-gap: var(--space-md);
+}
+
+.content {
+  grid-area: content;
+}
+
+.aside {
+  grid-area: aside;
+  display: flex;
+  flex-direction: column;
+  top: var(--space-md);
+  height: 100vh;
+  margin-top: var(--space-xl);
+}
+
+@media (max-width: 850px) {
+  .content-aside-grid {
+    grid-template-areas:
+      "content"
+      "aside";
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+  }
+
+  .aside {
+    margin-top: var(--space-md);
+    height: 100%;
+    position: initial;
+  }
+}
+
+.image-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: var(--space-sm);
+  margin-top: var(--space-lg);
+  margin-bottom: var(--space-lg);
+}
+
+.page {
+  margin-top: var(--space-lg);
+  margin-top: var(--space-lg);
+}
+
+@media (max-width: 830px) {
+  .only-mobile-padding {
     padding: 0 var(--space-sm);
   }
+}
+
+@media (min-width: 600px) {
+  .only-fullscreen-padding {
+    padding: 0 var(--space-sm);
+  }
+}
+
+.column-grid-md {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: var(--space-md);
+}
+
+.column-grid-lg {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: var(--space-lg);
+}
+
+/* Typography */
+
+.site-title {
+  margin: 0;
+  padding: var(--space-md) 0;
+  padding-right: var(--space-md);
+}
+
+.title {
+  font-weight: 900;
+  text-transform: uppercase;
+  letter-spacing: var(--caps-letter-spacing);
 }
